feat: Implementación de pruebas unitarias para el login
Se agregan pruebas unitarias para el `UsuarioRepository`, cubriendo los escenarios de login exitoso, credenciales inválidas y errores de red.

Cambios:
- Se añade la dependencia de Mockito, corrutinas de prueba y MockWebServer para facilitar la creación de pruebas unitarias.
- Se configura `build.gradle.kts` para habilitar el agente dinámico en las pruebas.
- Se renombran y actualizan archivos de prueba para incluir casos de prueba para el login y la obtención de preguntas de seguridad.
- Se actualiza el ícono del botón en `activity_main.xml`.